--- a/Basic-Student-Bio.html
+++ b/Basic-Student-Bio.html
@@ -13,3 +13,5 @@
       <h2>William McRae</h2>
       
       <img src="https://alumni.berkeley.edu/sites/default/files/styles/960x400/public/squatchstars.jpg?itok=v-uMeovJ" width "200" height ="100">
+    </body>
+</html>
