update to basic student bio

--- a/Basic-Student-Bio.html
+++ b/Basic-Student-Bio.html
@@ -12,6 +12,18 @@
       <br>
       <h2>William McRae</h2>
       
-      <img src="https://alumni.berkeley.edu/sites/default/files/styles/960x400/public/squatchstars.jpg?itok=v-uMeovJ" width "200" height ="100">
+      <img src="https://alumni.berkeley.edu/sites/default/files/styles/960x400/public/squatchstars.jpg?itok=v-uMeovJ" Width="400">
+      <br>
+      <p>This isn't actually a picture of me, though I do in some respects favor the cryptid known as Bigfoot. I am not hairy, nor am I particularly large footed however I do tend to walk on two feet as this creature is purported to do. I am apt to roam the woods when the occasion calls for it. I am fond of trees and other greenish brown plants. Am I Bigfoot? Perhaps we will never know. For now, Will is just fine. Thanks for stopping by. 
+      </p>
+      <br>
+      <h3>Contact Info</h3>
+      <br>
+      <ul>
+          <li>Email:<a href="mailto:mcraewillc@gmail.com">Will McRae</a></li>
+          <li>Github:</li>
+          <li>Portfolio:</li>
+      </ul>
+
     </body>
 </html>
