changes to contact info in basic student bio

--- a/Basic-Student-Bio.html
+++ b/Basic-Student-Bio.html
@@ -21,7 +21,7 @@
       <br>
       <ul>
           <li>Email:<a href="mailto:mcraewillc@gmail.com">Will McRae</a></li>
-          <li>Github:</li>
+          <li>Github:Will McRae</li>
           <li>Portfolio:</li>
       </ul>
 
