--- a/Basic-Student-Bio.html
+++ b/Basic-Student-Bio.html
@@ -21,8 +21,8 @@
       <br>
       <ul>
           <li>Email:<a href="mailto:mcraewillc@gmail.com">Will McRae</a></li>
-          <li>Github:Will McRae</li>
-          <li>Portfolio:</li>
+          <li>Github:<a href="https://github.com/mcraewillc/New-Braunfels">Will McRae</a></li>
+          <li>Portfolio:<a href="https://www.comingsoon.net/">Coming Soon</a></li>
       </ul>
 
     </body>
