removed the open in new tab function from the email link

--- a/Basic-Student-Bio.html
+++ b/Basic-Student-Bio.html
@@ -20,7 +20,7 @@
       <h3>Contact Info</h3>
       <br>
       <ul>
-          <li>Email:<a href="mailto:mcraewillc@gmail.com" target ="blank">Will McRae</a></li>
+          <li>Email:<a href="mailto:mcraewillc@gmail.com">Will McRae</a></li>
           <li>Github:<a href="https://github.com/mcraewillc/New-Braunfels" target ="blank">Will McRae</a></li>
           <li>Portfolio:<a href="https://www.comingsoon.net/" target ="blank">Coming Soon</a></li>
       </ul>
